2020-01-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Enable WebGL by default
        https://bugs.webkit.org/show_bug.cgi?id=205335

        Reviewed by Adrian Perez de Castro.

        Update the unit test.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitSettings.cpp:
        (testWebKitSettings):

2020-01-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Enable WebAudio by default
        https://bugs.webkit.org/show_bug.cgi?id=205334

        Reviewed by Adrian Perez de Castro.

        Update the unit test.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitSettings.cpp:
        (testWebKitSettings):

2020-01-20  Sam Weinig  <weinig@apple.com>

        Platform.h is out of control Part 8: Macros are used inconsistently
        https://bugs.webkit.org/show_bug.cgi?id=206425

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/Packed.cpp:
        (TestWebKitAPI::TEST):
        Update to use OS_CONSTANT.

2020-01-20  Saam Barati  <sbarati@apple.com>

        REGRESSION(r254788): mozilla-tests.yaml/js1_5/Regress/regress-191633.js.mozilla fails
        https://bugs.webkit.org/show_bug.cgi?id=206477
        <rdar://problem/58714886>

        Unreviewed.

        In r232603 when we added test specific options, the implementation did not
        clear the test specific options before parsing each test inside a yaml
        file. It only worked for tests where we ran each js file inside a directory.
        This patch makes it also work for yaml files.

        * Scripts/run-jsc-stress-tests:

2020-01-20  David Kilzer  <ddkilzer@apple.com>

        Fix missing header guards and clean up empty files in WebCore, WebKitLegacy, WebKit, Tools
        <https://webkit.org/b/206505>

        Reviewed by Eric Carlson.

        * DumpRenderTree/TestNetscapePlugIn/TestObject.h:
        * TestWebKitAPI/JavaScriptTest.h:
        * TestWebKitAPI/Tests/WebCore/DFAHelpers.h:
        - Add #pragma once statement.
